--- a/app/src/main/res/layout/details_fragment_item.xml
+++ b/app/src/main/res/layout/details_fragment_item.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/details_item_pict"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:srcCompat="@drawable/pict3" />
 
         <TextView
