--- a/app/src/main/res/layout/estate_fragment_item.xml
+++ b/app/src/main/res/layout/estate_fragment_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/list_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
