--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -335,7 +335,7 @@
                 android:layout_height="30dp" />
 
             <FrameLayout
-                android:id="@+id/map"
+                android:id="@+id/maps_map"
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="300dp" />
