--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -125,8 +125,9 @@
                     android:id="@+id/search_price_slider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:valueFrom="0.0"
-                    android:valueTo="10000000000.0"
+                    android:stepSize="100.0"
+                    android:valueFrom="50000"
+                    android:valueTo="2000000"
                     app:values="@array/price_slider_values" />
             </LinearLayout>
 
@@ -147,7 +148,8 @@
                     android:id="@+id/search_surface_slider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:valueFrom="0.0"
+                    android:stepSize="1.0"
+                    android:valueFrom="0"
                     android:valueTo="10000.0"
                     app:values="@array/surface_slider_values" />
             </LinearLayout>
@@ -169,8 +171,9 @@
                     android:id="@+id/search_rooms_slider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:valueFrom="0.0"
-                    android:valueTo="100.0"
+                    android:valueFrom="0"
+                    android:valueTo="100"
+                    android:stepSize="1.0"
                     app:values="@array/rooms_slider_values" />
             </LinearLayout>
 
